--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 SECRET_KEY=django-insecure-$g3)^i!%l3!el4xeh_b_b002h&lpbacrx-sl^u^#je%sx_g0mf
 DEBUG=True
-DATABASE_URL=postgresql://django_assignment_p64e_user:mhL9FXV2rjSS9wCYMXYIjdUjN3EpK5rb@dpg-d059o8h5pdvs73etqvo0-a.singapore-postgres.render.com/django_assignment_p64e
+DATABASE_URL=postgresql://postgres:postgres@localhost:5432/postgres
