Feat: Add Docker setup for application

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,27 +1,19 @@
-
 services:
-  db:
-    image: postgis/postgis:16-master
-    ports:
-      - "5432:5432"
-    volumes:
-      - ./data/db:/var/lib/postgresql/data
-    environment:
-      - POSTGRES_DB=postgres
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=postgres
-
   web:
     build: .
-    command: uvicorn core.asgi:application --host 0.0.0.0 --port 80 --reload --log-config log_config.json
+    command: python /code/manage.py runserver 0.0.0.0:8000
     volumes:
       - .:/code
-      - ./temp/:/tmp/
     ports:
-      - "80:80"
+      - 8000:8000
     depends_on:
       - db
-    env_file:
-      - ".env"
+  db:
+    image: postgres:16
+    volumes:
+      - postgres_data:/var/lib/postgresql/data/
+    environment:
+      - "POSTGRES_HOST_AUTH_METHOD=trust"
 
-# sudo docker-compose up --build
+volumes:
+  postgres_data:
